--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "kubespray"]
-	path = kubespray
+[submodule "ansible/kubespray"]
+	path = ansible/kubespray
 	url = https://github.com/kubernetes-sigs/kubespray.git
