update kubespray iac + docs

--- a/ansible/inventory/homelab/inventory.ini
+++ b/ansible/inventory/homelab/inventory.ini
@@ -2,7 +2,7 @@
 # ## different ip than the default iface
 # ## We should set etcd_member_name for etcd cluster. The node that is not a etcd member do not need to set the value, or can set the empty string value.
 [all]
-# node1 ansible_host=95.54.0.12  # ip=10.3.0.1 etcd_member_name=etcd1
+rpi01 ansible_host=rpi01  ip=192.168.0.179 etcd_member_name=etcd1
 # node2 ansible_host=95.54.0.13  # ip=10.3.0.2 etcd_member_name=etcd2
 # node3 ansible_host=95.54.0.14  # ip=10.3.0.3 etcd_member_name=etcd3
 # node4 ansible_host=95.54.0.15  # ip=10.3.0.4 etcd_member_name=etcd4
