--- a/k8s/argocd/argocd/helm/values.yaml
+++ b/k8s/argocd/argocd/helm/values.yaml
@@ -5,17 +5,12 @@ configs:
       name: zbialik-homelab
       type: git
   secret:
-    argocdServerAdminPassword: $2a$10$ExAxdGasn4wdoHSD3i3cMOtc6Gz2XN7RfnzvjoBHnJvqa7Q7Uv7Vy
+    argocdServerAdminPassword: $2a$10$xItx1biJu5Qql.ANf/3Cju/mxYE04WUG5e3I/MoRpxbVSdoDgLN/W
 
 server:
   extraArgs:
     - "--insecure"
   ingress:
     enabled: true
-    # annotations:
-    #   kubernetes.io/ingress.class: nginx
-    #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-    #   nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
-    #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     hosts:
       - argo-cd.zb-macbook.local
