don't use cilium as ingress-controller

--- a/k8s/kube-system/cilium/helm/values.yaml
+++ b/k8s/kube-system/cilium/helm/values.yaml
@@ -1,7 +1,7 @@
-ingressController:
-  enabled: true
-  default: true
-  loadbalancerMode: dedicated
+# ingressController:
+#   enabled: true
+#   default: true
+#   loadbalancerMode: dedicated
 
 operator:
   replicas: 1
