--- a/k8s/argocd/argocd/kustomization.yaml
+++ b/k8s/argocd/argocd/kustomization.yaml
@@ -6,3 +6,12 @@ commonLabels:
 resources:
 - namespace.yaml
 - generated.yaml
+
+patches:
+- target:
+    kind: Service
+    name: argocd-server
+  patch: |-
+    - op: replace
+      path: /spec/type
+      value: NodePort
