--- a/k8s/traefik/traefik/generated.yaml
+++ b/k8s/traefik/traefik/generated.yaml
@@ -4,10 +4,10 @@ kind: ServiceAccount
 apiVersion: v1
 metadata:
   name: traefik
-  namespace: default
+  namespace: traefik
   labels:
     app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: traefik-default
+    app.kubernetes.io/instance: traefik-traefik
     helm.sh/chart: traefik-24.0.0
     app.kubernetes.io/managed-by: Helm
   annotations:
@@ -16,10 +16,10 @@ metadata:
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: traefik-default
+  name: traefik-traefik
   labels:
     app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: traefik-default
+    app.kubernetes.io/instance: traefik-traefik
     helm.sh/chart: traefik-24.0.0
     app.kubernetes.io/managed-by: Helm
 rules:
@@ -72,30 +72,30 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: traefik-default
+  name: traefik-traefik
   labels:
     app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: traefik-default
+    app.kubernetes.io/instance: traefik-traefik
     helm.sh/chart: traefik-24.0.0
     app.kubernetes.io/managed-by: Helm
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: traefik-default
+  name: traefik-traefik
 subjects:
   - kind: ServiceAccount
     name: traefik
-    namespace: default
+    namespace: traefik
 ---
 # Source: traefik/templates/service.yaml
 apiVersion: v1
 kind: Service
 metadata:
   name: traefik
-  namespace: default
+  namespace: traefik
   labels:
     app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: traefik-default
+    app.kubernetes.io/instance: traefik-traefik
     helm.sh/chart: traefik-24.0.0
     app.kubernetes.io/managed-by: Helm
   annotations:
@@ -103,7 +103,7 @@ spec:
   type: LoadBalancer
   selector:
     app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: traefik-default
+    app.kubernetes.io/instance: traefik-traefik
   ports:
   - port: 80
     name: "web"
@@ -119,10 +119,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: traefik
-  namespace: default
+  namespace: traefik
   labels:
     app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: traefik-default
+    app.kubernetes.io/instance: traefik-traefik
     helm.sh/chart: traefik-24.0.0
     app.kubernetes.io/managed-by: Helm
   annotations:
@@ -131,7 +131,7 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: traefik
-      app.kubernetes.io/instance: traefik-default
+      app.kubernetes.io/instance: traefik-traefik
   strategy: 
     rollingUpdate:
       maxSurge: 1
@@ -146,7 +146,7 @@ spec:
         prometheus.io/port: "9100"
       labels:
         app.kubernetes.io/name: traefik
-        app.kubernetes.io/instance: traefik-default
+        app.kubernetes.io/instance: traefik-traefik
         helm.sh/chart: traefik-24.0.0
         app.kubernetes.io/managed-by: Helm
     spec:
@@ -245,7 +245,7 @@ metadata:
     ingressclass.kubernetes.io/is-default-class: "true"
   labels:
     app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: traefik-default
+    app.kubernetes.io/instance: traefik-traefik
     helm.sh/chart: traefik-24.0.0
     app.kubernetes.io/managed-by: Helm
   name: traefik
@@ -257,11 +257,11 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: traefik-dashboard
-  namespace: default
+  namespace: traefik
   annotations:
   labels:
     app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: traefik-default
+    app.kubernetes.io/instance: traefik-traefik
     helm.sh/chart: traefik-24.0.0
     app.kubernetes.io/managed-by: Helm
 spec:
