--- a/k8s/metallb-system/metallb/confs.yaml
+++ b/k8s/metallb-system/metallb/confs.yaml
@@ -10,7 +10,7 @@ spec:
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
-  name: example
+  name: homelab-local
   namespace: metallb-system
 spec:
   ipAddressPools:
