update ip address pool for archer c7 range

--- a/k8s/metallb-system/metallb/confs.yaml
+++ b/k8s/metallb-system/metallb/confs.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: metallb-system
 spec:
   addresses:
-  - 192.168.1.240-192.168.1.250
+  - 192.168.0.100-192.168.0.249 # DHCP IP Address Pool of Archer C7 router
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
