remove traefik resources temporarily to demo nginx

--- a/k8s/traefik/traefik/kustomization.yaml
+++ b/k8s/traefik/traefik/kustomization.yaml
@@ -2,7 +2,7 @@ kind: Kustomization
 commonLabels:
   app: traefik
 
-resources:
-- crds.yaml
-- namespace.yaml
-- generated.yaml
+resources: []
+# - crds.yaml
+# - namespace.yaml
+# - generated.yaml
