attempt argocd ingress

--- a/k8s/argocd/argocd/generated.yaml
+++ b/k8s/argocd/argocd/generated.yaml
@@ -7,7 +7,7 @@ metadata:
   name: argocd-application-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-application-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: application-controller
@@ -23,7 +23,7 @@ metadata:
   name: argocd-applicationset-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-applicationset-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: applicationset-controller
@@ -39,7 +39,7 @@ metadata:
   name: argocd-notifications-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-notifications-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: notifications-controller
@@ -55,7 +55,7 @@ metadata:
   name: argocd-repo-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
@@ -71,7 +71,7 @@ metadata:
   name: argocd-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -87,7 +87,7 @@ metadata:
   name: argocd-dex-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-dex-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: dex-server
@@ -102,7 +102,7 @@ metadata:
   name: argocd-notifications-secret
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-notifications-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: notifications-controller
@@ -119,7 +119,7 @@ metadata:
   name: argocd-secret
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-secret
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -130,7 +130,7 @@ type: Opaque
 # Setting a blank data again will wipe admin password/key/cert
 data:
   admin.password: JDJhJDEwJHhJdHgxYmlKdTVRcWwuQU5mLzNDanUvbXhZRTA0V1VHNWUzSS9Nb1JweGJWU2RvRGdMTi9X
-  admin.passwordMtime: MjAyMy0wOC0yNlQxODo1MjoyMFo=
+  admin.passwordMtime: MjAyMy0wOC0yN1QxNzo0MzoyNFo=
 ---
 # Source: argo-cd/templates/argocd-configs/repository-secret.yaml
 apiVersion: v1
@@ -140,7 +140,7 @@ metadata:
   namespace: "argocd"
   labels:
     argocd.argoproj.io/secret-type: repository
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: argocd
@@ -157,7 +157,7 @@ metadata:
   name: argocd-cm
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -179,7 +179,7 @@ metadata:
   name: argocd-cmd-params-cm
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-cmd-params-cm
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -224,7 +224,7 @@ metadata:
   name: argocd-gpg-keys-cm
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-gpg-keys-cm
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/managed-by: Helm
@@ -238,7 +238,7 @@ metadata:
   name: argocd-notifications-cm
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-notifications-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: notifications-controller
@@ -256,7 +256,7 @@ metadata:
   name: argocd-rbac-cm
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-rbac-cm
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -275,7 +275,7 @@ metadata:
   name: argocd-ssh-known-hosts-cm
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-ssh-known-hosts-cm
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/managed-by: Helm
@@ -305,7 +305,7 @@ metadata:
   name: argocd-tls-certs-cm
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-tls-certs-cm
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/managed-by: Helm
@@ -18716,7 +18716,7 @@ kind: ClusterRole
 metadata:
   name: argocd-application-controller
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-application-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: application-controller
@@ -18741,7 +18741,7 @@ kind: ClusterRole
 metadata:
   name: argocd-repo-server
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
@@ -18766,7 +18766,7 @@ kind: ClusterRole
 metadata:
   name: argocd-server
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -18823,7 +18823,7 @@ kind: ClusterRoleBinding
 metadata:
   name: argocd-application-controller
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-application-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: application-controller
@@ -18845,7 +18845,7 @@ kind: ClusterRoleBinding
 metadata:
   name: argocd-repo-server
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
@@ -18867,7 +18867,7 @@ kind: ClusterRoleBinding
 metadata:
   name: argocd-server
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -18890,7 +18890,7 @@ metadata:
   name: argocd-application-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-application-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: application-controller
@@ -18935,7 +18935,7 @@ metadata:
   name: argocd-applicationset-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-applicationset-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: applicationset-controller
@@ -19030,7 +19030,7 @@ metadata:
   name: argocd-notifications-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-notifications-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: notifications-controller
@@ -19081,7 +19081,7 @@ metadata:
   name: argocd-repo-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
@@ -19097,7 +19097,7 @@ metadata:
   name: argocd-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -19147,7 +19147,7 @@ metadata:
   name: argocd-dex-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-dex-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: dex-server
@@ -19172,7 +19172,7 @@ metadata:
   name: argocd-application-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-application-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: application-controller
@@ -19195,7 +19195,7 @@ metadata:
   name: argocd-applicationset-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-applicationset-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: applicationset-controller
@@ -19218,7 +19218,7 @@ metadata:
   name: argocd-notifications-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-notifications-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: notifications-controller
@@ -19241,7 +19241,7 @@ metadata:
   name: argocd-repo-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
@@ -19264,7 +19264,7 @@ metadata:
   name: argocd-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -19287,7 +19287,7 @@ metadata:
   name: argocd-dex-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-dex-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: dex-server
@@ -19310,7 +19310,7 @@ metadata:
   name: argocd-applicationset-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-applicationset-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: applicationset-controller
@@ -19332,7 +19332,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
@@ -19358,7 +19358,7 @@ metadata:
   name: argocd-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -19387,7 +19387,7 @@ metadata:
   name: argocd-dex-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-dex-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: dex-server
@@ -19415,7 +19415,7 @@ metadata:
   name: argocd-redis
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-redis
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: redis
@@ -19438,7 +19438,7 @@ metadata:
   name: argocd-applicationset-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-applicationset-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: applicationset-controller
@@ -19455,9 +19455,9 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/cmd-params: e0d82c29a52487d431f44d96d0cce71baf36cff24e234ac2166af239dbf3aaa4
+        checksum/cmd-params: 22bba6be92eead63d62c8a34e22b1261e15ee9f8644f5a0b257a8bfd22031878
       labels:
-        helm.sh/chart: argo-cd-5.43.7
+        helm.sh/chart: argo-cd-5.43.8
         app.kubernetes.io/name: argocd-applicationset-controller
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: applicationset-controller
@@ -19665,7 +19665,7 @@ metadata:
   name: argocd-notifications-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-notifications-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: notifications-controller
@@ -19684,7 +19684,7 @@ spec:
   template:
     metadata:
       labels:
-        helm.sh/chart: argo-cd-5.43.7
+        helm.sh/chart: argo-cd-5.43.8
         app.kubernetes.io/name: argocd-notifications-controller
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: notifications-controller
@@ -19771,7 +19771,7 @@ metadata:
   name: argocd-repo-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
@@ -19788,9 +19788,9 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/cmd-params: e0d82c29a52487d431f44d96d0cce71baf36cff24e234ac2166af239dbf3aaa4
+        checksum/cmd-params: 22bba6be92eead63d62c8a34e22b1261e15ee9f8644f5a0b257a8bfd22031878
       labels:
-        helm.sh/chart: argo-cd-5.43.7
+        helm.sh/chart: argo-cd-5.43.8
         app.kubernetes.io/name: argocd-repo-server
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: repo-server
@@ -20081,7 +20081,7 @@ metadata:
   name: argocd-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -20098,9 +20098,9 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/cmd-params: e0d82c29a52487d431f44d96d0cce71baf36cff24e234ac2166af239dbf3aaa4
+        checksum/cmd-params: 22bba6be92eead63d62c8a34e22b1261e15ee9f8644f5a0b257a8bfd22031878
       labels:
-        helm.sh/chart: argo-cd-5.43.7
+        helm.sh/chart: argo-cd-5.43.8
         app.kubernetes.io/name: argocd-server
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: server
@@ -20439,7 +20439,7 @@ metadata:
   name: argocd-dex-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-dex-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: dex-server
@@ -20456,9 +20456,9 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/cmd-params: e0d82c29a52487d431f44d96d0cce71baf36cff24e234ac2166af239dbf3aaa4
+        checksum/cmd-params: 22bba6be92eead63d62c8a34e22b1261e15ee9f8644f5a0b257a8bfd22031878
       labels:
-        helm.sh/chart: argo-cd-5.43.7
+        helm.sh/chart: argo-cd-5.43.8
         app.kubernetes.io/name: argocd-dex-server
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: dex-server
@@ -20571,7 +20571,7 @@ metadata:
   name: argocd-redis
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-redis
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: redis
@@ -20587,7 +20587,7 @@ spec:
   template:
     metadata:
       labels:
-        helm.sh/chart: argo-cd-5.43.7
+        helm.sh/chart: argo-cd-5.43.8
         app.kubernetes.io/name: argocd-redis
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: redis
@@ -20639,7 +20639,7 @@ metadata:
   name: argocd-application-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.7
+    helm.sh/chart: argo-cd-5.43.8
     app.kubernetes.io/name: argocd-application-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: application-controller
@@ -20658,9 +20658,9 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/cmd-params: e0d82c29a52487d431f44d96d0cce71baf36cff24e234ac2166af239dbf3aaa4
+        checksum/cmd-params: 22bba6be92eead63d62c8a34e22b1261e15ee9f8644f5a0b257a8bfd22031878
       labels:
-        helm.sh/chart: argo-cd-5.43.7
+        helm.sh/chart: argo-cd-5.43.8
         app.kubernetes.io/name: argocd-application-controller
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: application-controller
@@ -20877,3 +20877,33 @@ spec:
           - key: ca.crt
             path: ca.crt
       dnsPolicy: ClusterFirst
+---
+# Source: argo-cd/templates/argocd-server/ingress.yaml
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: argocd-server
+  namespace: "argocd"
+  labels:
+    helm.sh/chart: argo-cd-5.43.8
+    app.kubernetes.io/name: argocd-server
+    app.kubernetes.io/instance: argocd
+    app.kubernetes.io/component: server
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/part-of: argocd
+    app.kubernetes.io/version: "v2.8.2"
+spec:
+  rules:
+    - host: "argocd.zbialik.com"
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: argocd-server
+                port:
+                  number: 80
+  tls:
+    - hosts:
+      - argocd.zbialik.com
