--- a/k8s/argocd/argocd/helm/values.yaml
+++ b/k8s/argocd/argocd/helm/values.yaml
@@ -10,3 +10,10 @@ configs:
 server:
   extraArgs:
     - "--insecure"
+  ingress:
+    enabled: true
+    hosts:
+    - argocd.zbialik.com
+    tls:
+    - hosts:
+      - argocd.zbialik.com
