--- a/k8s/argocd/argocd/helm/values.yaml
+++ b/k8s/argocd/argocd/helm/values.yaml
@@ -12,6 +12,7 @@ server:
     - "--insecure"
   ingress:
     enabled: true
+    ingressClassName: nginx
     hosts:
     - argocd.zbialik.com
     tls:
