--- a/k8s/cert-manager/cert-manager/issuer.yaml
+++ b/k8s/cert-manager/cert-manager/issuer.yaml
@@ -2,6 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: homelab-ca-issuer
+  namespace: cert-manager
 spec:
   ca:
     secretName: homelab-root-cert
