--- a/k8s/cert-manager/cert-manager/kustomization.yaml
+++ b/k8s/cert-manager/cert-manager/kustomization.yaml
@@ -3,8 +3,5 @@ commonLabels:
   app: cert-manager
 
 resources:
-- namespace.yaml
 - generated.yaml
-- cert-ca.yaml
-- cluster-issuer.yaml
-- issuer.yaml
+- config
