--- a/k8s/cert-manager/cert-manager/config/cert-ca.yaml
+++ b/k8s/cert-manager/cert-manager/config/cert-ca.yaml
@@ -10,6 +10,7 @@ spec:
   privateKey:
     algorithm: ECDSA
     size: 256
+    rotationPolicy: Always
   issuerRef:
     name: selfsigned-issuer
     kind: ClusterIssuer
