update cert for algorithm RSA

--- a/k8s/cert-manager/cert-manager/config/cert-ca.yaml
+++ b/k8s/cert-manager/cert-manager/config/cert-ca.yaml
@@ -8,7 +8,7 @@ spec:
   commonName: zbialik.com
   secretName: zbialik
   privateKey:
-    algorithm: ECDSA
+    algorithm: RSA
     size: 256
     rotationPolicy: Always
   issuerRef:
