--- a/k8s/argocd/argocd/generated.yaml
+++ b/k8s/argocd/argocd/generated.yaml
@@ -7,7 +7,7 @@ metadata:
   name: argocd-application-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-application-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: application-controller
@@ -23,7 +23,7 @@ metadata:
   name: argocd-applicationset-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-applicationset-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: applicationset-controller
@@ -39,7 +39,7 @@ metadata:
   name: argocd-notifications-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-notifications-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: notifications-controller
@@ -55,7 +55,7 @@ metadata:
   name: argocd-repo-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
@@ -71,7 +71,7 @@ metadata:
   name: argocd-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -87,7 +87,7 @@ metadata:
   name: argocd-dex-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-dex-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: dex-server
@@ -102,7 +102,7 @@ metadata:
   name: argocd-notifications-secret
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-notifications-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: notifications-controller
@@ -119,7 +119,7 @@ metadata:
   name: argocd-secret
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-secret
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -130,7 +130,7 @@ type: Opaque
 # Setting a blank data again will wipe admin password/key/cert
 data:
   admin.password: JDJhJDEwJHhJdHgxYmlKdTVRcWwuQU5mLzNDanUvbXhZRTA0V1VHNWUzSS9Nb1JweGJWU2RvRGdMTi9X
-  admin.passwordMtime: MjAyMy0wOC0yN1QxNzo1MDowM1o=
+  admin.passwordMtime: MjAyMy0wOC0zMFQxODowMzoyMFo=
 ---
 # Source: argo-cd/templates/argocd-configs/repository-secret.yaml
 apiVersion: v1
@@ -140,7 +140,7 @@ metadata:
   namespace: "argocd"
   labels:
     argocd.argoproj.io/secret-type: repository
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: argocd
@@ -157,7 +157,7 @@ metadata:
   name: argocd-cm
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -168,6 +168,27 @@ data:
   admin.enabled: "true"
   application.instanceLabelKey: argocd.argoproj.io/instance
   exec.enabled: "false"
+  resource.customizations.health.cert-manager.io_Certificate: |
+    hs = {}
+    if obj.status ~= nil then
+      if obj.status.conditions ~= nil then
+        for i, condition in ipairs(obj.status.conditions) do
+          if condition.type == "Ready" and condition.status == "False" then
+            hs.status = "Degraded"
+            hs.message = condition.message
+            return hs
+          end
+          if condition.type == "Ready" and condition.status == "True" then
+            hs.status = "Healthy"
+            hs.message = condition.message
+            return hs
+          end
+        end
+      end
+    end
+    hs.status = "Progressing"
+    hs.message = "Waiting for certificate"
+    return hs
   server.rbac.log.enforce.enable: "false"
   timeout.hard.reconciliation: 0s
   timeout.reconciliation: 180s
@@ -179,7 +200,7 @@ metadata:
   name: argocd-cmd-params-cm
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-cmd-params-cm
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -224,7 +245,7 @@ metadata:
   name: argocd-gpg-keys-cm
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-gpg-keys-cm
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/managed-by: Helm
@@ -238,7 +259,7 @@ metadata:
   name: argocd-notifications-cm
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-notifications-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: notifications-controller
@@ -256,7 +277,7 @@ metadata:
   name: argocd-rbac-cm
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-rbac-cm
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -275,7 +296,7 @@ metadata:
   name: argocd-ssh-known-hosts-cm
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-ssh-known-hosts-cm
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/managed-by: Helm
@@ -305,7 +326,7 @@ metadata:
   name: argocd-tls-certs-cm
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-tls-certs-cm
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/managed-by: Helm
@@ -18716,7 +18737,7 @@ kind: ClusterRole
 metadata:
   name: argocd-application-controller
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-application-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: application-controller
@@ -18741,7 +18762,7 @@ kind: ClusterRole
 metadata:
   name: argocd-repo-server
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
@@ -18766,7 +18787,7 @@ kind: ClusterRole
 metadata:
   name: argocd-server
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -18823,7 +18844,7 @@ kind: ClusterRoleBinding
 metadata:
   name: argocd-application-controller
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-application-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: application-controller
@@ -18845,7 +18866,7 @@ kind: ClusterRoleBinding
 metadata:
   name: argocd-repo-server
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
@@ -18867,7 +18888,7 @@ kind: ClusterRoleBinding
 metadata:
   name: argocd-server
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -18890,7 +18911,7 @@ metadata:
   name: argocd-application-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-application-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: application-controller
@@ -18935,7 +18956,7 @@ metadata:
   name: argocd-applicationset-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-applicationset-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: applicationset-controller
@@ -19030,7 +19051,7 @@ metadata:
   name: argocd-notifications-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-notifications-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: notifications-controller
@@ -19081,7 +19102,7 @@ metadata:
   name: argocd-repo-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
@@ -19097,7 +19118,7 @@ metadata:
   name: argocd-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -19147,7 +19168,7 @@ metadata:
   name: argocd-dex-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-dex-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: dex-server
@@ -19172,7 +19193,7 @@ metadata:
   name: argocd-application-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-application-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: application-controller
@@ -19195,7 +19216,7 @@ metadata:
   name: argocd-applicationset-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-applicationset-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: applicationset-controller
@@ -19218,7 +19239,7 @@ metadata:
   name: argocd-notifications-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-notifications-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: notifications-controller
@@ -19241,7 +19262,7 @@ metadata:
   name: argocd-repo-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
@@ -19264,7 +19285,7 @@ metadata:
   name: argocd-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -19287,7 +19308,7 @@ metadata:
   name: argocd-dex-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-dex-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: dex-server
@@ -19310,7 +19331,7 @@ metadata:
   name: argocd-applicationset-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-applicationset-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: applicationset-controller
@@ -19332,7 +19353,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
@@ -19358,7 +19379,7 @@ metadata:
   name: argocd-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -19387,7 +19408,7 @@ metadata:
   name: argocd-dex-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-dex-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: dex-server
@@ -19415,7 +19436,7 @@ metadata:
   name: argocd-redis
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-redis
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: redis
@@ -19438,7 +19459,7 @@ metadata:
   name: argocd-applicationset-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-applicationset-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: applicationset-controller
@@ -19455,9 +19476,9 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/cmd-params: 22bba6be92eead63d62c8a34e22b1261e15ee9f8644f5a0b257a8bfd22031878
+        checksum/cmd-params: 8c64dab6b239f07d6d04bab9f168bb311bf8daa491da0270f3f9a2623f1ea125
       labels:
-        helm.sh/chart: argo-cd-5.43.8
+        helm.sh/chart: argo-cd-5.44.0
         app.kubernetes.io/name: argocd-applicationset-controller
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: applicationset-controller
@@ -19665,7 +19686,7 @@ metadata:
   name: argocd-notifications-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-notifications-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: notifications-controller
@@ -19684,7 +19705,7 @@ spec:
   template:
     metadata:
       labels:
-        helm.sh/chart: argo-cd-5.43.8
+        helm.sh/chart: argo-cd-5.44.0
         app.kubernetes.io/name: argocd-notifications-controller
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: notifications-controller
@@ -19771,7 +19792,7 @@ metadata:
   name: argocd-repo-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
@@ -19788,9 +19809,9 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/cmd-params: 22bba6be92eead63d62c8a34e22b1261e15ee9f8644f5a0b257a8bfd22031878
+        checksum/cmd-params: 8c64dab6b239f07d6d04bab9f168bb311bf8daa491da0270f3f9a2623f1ea125
       labels:
-        helm.sh/chart: argo-cd-5.43.8
+        helm.sh/chart: argo-cd-5.44.0
         app.kubernetes.io/name: argocd-repo-server
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: repo-server
@@ -20081,7 +20102,7 @@ metadata:
   name: argocd-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
@@ -20098,9 +20119,9 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/cmd-params: 22bba6be92eead63d62c8a34e22b1261e15ee9f8644f5a0b257a8bfd22031878
+        checksum/cmd-params: 8c64dab6b239f07d6d04bab9f168bb311bf8daa491da0270f3f9a2623f1ea125
       labels:
-        helm.sh/chart: argo-cd-5.43.8
+        helm.sh/chart: argo-cd-5.44.0
         app.kubernetes.io/name: argocd-server
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: server
@@ -20439,7 +20460,7 @@ metadata:
   name: argocd-dex-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-dex-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: dex-server
@@ -20456,9 +20477,9 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/cmd-params: 22bba6be92eead63d62c8a34e22b1261e15ee9f8644f5a0b257a8bfd22031878
+        checksum/cmd-params: 8c64dab6b239f07d6d04bab9f168bb311bf8daa491da0270f3f9a2623f1ea125
       labels:
-        helm.sh/chart: argo-cd-5.43.8
+        helm.sh/chart: argo-cd-5.44.0
         app.kubernetes.io/name: argocd-dex-server
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: dex-server
@@ -20571,7 +20592,7 @@ metadata:
   name: argocd-redis
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-redis
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: redis
@@ -20587,7 +20608,7 @@ spec:
   template:
     metadata:
       labels:
-        helm.sh/chart: argo-cd-5.43.8
+        helm.sh/chart: argo-cd-5.44.0
         app.kubernetes.io/name: argocd-redis
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: redis
@@ -20639,7 +20660,7 @@ metadata:
   name: argocd-application-controller
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-application-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: application-controller
@@ -20658,9 +20679,9 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/cmd-params: 22bba6be92eead63d62c8a34e22b1261e15ee9f8644f5a0b257a8bfd22031878
+        checksum/cmd-params: 8c64dab6b239f07d6d04bab9f168bb311bf8daa491da0270f3f9a2623f1ea125
       labels:
-        helm.sh/chart: argo-cd-5.43.8
+        helm.sh/chart: argo-cd-5.44.0
         app.kubernetes.io/name: argocd-application-controller
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: application-controller
@@ -20885,7 +20906,7 @@ metadata:
   name: argocd-server
   namespace: "argocd"
   labels:
-    helm.sh/chart: argo-cd-5.43.8
+    helm.sh/chart: argo-cd-5.44.0
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
