--- a/k8s/argocd/argocd/helm/values.yaml
+++ b/k8s/argocd/argocd/helm/values.yaml
@@ -1,4 +1,26 @@
 configs:
+  cm:
+    resource.customizations.health.cert-manager.io_Certificate: |
+      hs = {}
+      if obj.status ~= nil then
+        if obj.status.conditions ~= nil then
+          for i, condition in ipairs(obj.status.conditions) do
+            if condition.type == "Ready" and condition.status == "False" then
+              hs.status = "Degraded"
+              hs.message = condition.message
+              return hs
+            end
+            if condition.type == "Ready" and condition.status == "True" then
+              hs.status = "Healthy"
+              hs.message = condition.message
+              return hs
+            end
+          end
+        end
+      end
+      hs.status = "Progressing"
+      hs.message = "Waiting for certificate"
+      return hs
   repositories:
     zbialik-homelab-repo:
       url: https://github.com/zbialik/homelab.git
