fix secretName ref

--- a/k8s/cert-manager/cert-manager/config/cert-ca.yaml
+++ b/k8s/cert-manager/cert-manager/config/cert-ca.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   isCA: true
   commonName: zbialik.com
-  secretName: zbialik
+  secretName: zbialik-root-cert
   privateKey:
     algorithm: RSA
     size: 2048
