add cert-manager confs to argocd ingress

--- a/k8s/argocd/argocd/generated.yaml
+++ b/k8s/argocd/argocd/generated.yaml
@@ -130,7 +130,7 @@ type: Opaque
 # Setting a blank data again will wipe admin password/key/cert
 data:
   admin.password: JDJhJDEwJHhJdHgxYmlKdTVRcWwuQU5mLzNDanUvbXhZRTA0V1VHNWUzSS9Nb1JweGJWU2RvRGdMTi9X
-  admin.passwordMtime: MjAyMy0wOC0zMFQxODowMzoyMFo=
+  admin.passwordMtime: MjAyMy0wOC0zMFQyMzozODoyNVo=
 ---
 # Source: argo-cd/templates/argocd-configs/repository-secret.yaml
 apiVersion: v1
@@ -20913,6 +20913,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: argocd
     app.kubernetes.io/version: "v2.8.2"
+  annotations:
+    cert-manager.io/cluster-issuer: "selfsigned-issuer"
 spec:
   ingressClassName: nginx
   rules:
@@ -20929,3 +20931,4 @@ spec:
   tls:
     - hosts:
       - argocd.zbialik.com
+      secretName: argocd-cert
