--- a/k8s/argocd/argocd/helm/values.yaml
+++ b/k8s/argocd/argocd/helm/values.yaml
@@ -36,6 +36,7 @@ server:
     enabled: true
     annotations:
       cert-manager.io/cluster-issuer: selfsigned-issuer
+      cert-manager.io/common-name: argocd.zbialik.com
     ingressClassName: nginx
     hosts:
     - argocd.zbialik.com
