--- a/k8s/argocd/argocd/helm/values.yaml
+++ b/k8s/argocd/argocd/helm/values.yaml
@@ -35,7 +35,7 @@ server:
   ingress:
     enabled: true
     annotations:
-      cert-manager.io/cluster-issuer: selfsigned-issuer
+      # cert-manager.io/cluster-issuer: selfsigned-issuer
       cert-manager.io/common-name: argocd.zbialik.com
     ingressClassName: nginx
     hosts:
