convert clusterissuer to CA

--- a/k8s/argocd/argocd/generated.yaml
+++ b/k8s/argocd/argocd/generated.yaml
@@ -130,7 +130,7 @@ type: Opaque
 # Setting a blank data again will wipe admin password/key/cert
 data:
   admin.password: JDJhJDEwJHhJdHgxYmlKdTVRcWwuQU5mLzNDanUvbXhZRTA0V1VHNWUzSS9Nb1JweGJWU2RvRGdMTi9X
-  admin.passwordMtime: MjAyMy0wOS0wMVQwMDozNzo1M1o=
+  admin.passwordMtime: MjAyMy0wOS0wMVQwMDo0NTowN1o=
 ---
 # Source: argo-cd/templates/argocd-configs/repository-secret.yaml
 apiVersion: v1
@@ -20914,6 +20914,7 @@ metadata:
     app.kubernetes.io/part-of: argocd
     app.kubernetes.io/version: "v2.8.2"
   annotations:
+    cert-manager.io/cluster-issuer: "selfsigned-issuer"
     cert-manager.io/common-name: "argocd.zbialik.com"
 spec:
   ingressClassName: nginx
