--- a/k8s/cert-manager/cert-manager/config/cluster-issuer.yaml
+++ b/k8s/cert-manager/cert-manager/config/cluster-issuer.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: selfsigned-issuer
+  name: ca-issuer
 spec:
   ca:
     secretName: zbialik-root-cert
