--- a/k8s/jhu/mysql/helm/values.yaml
+++ b/k8s/jhu/mysql/helm/values.yaml
@@ -11,7 +11,7 @@ primary:
   podSecurityContext:
     enabled: true
     fsGroup: 1001
-    fsGroupChangePolicy: "OnRootMismatch"
+    fsGroupChangePolicy: "Always"
 
 
   service:
