--- a/k8s/jhu/mysql/generated.yaml
+++ b/k8s/jhu/mysql/generated.yaml
@@ -95,10 +95,13 @@ metadata:
     app.kubernetes.io/name: mysql
     helm.sh/chart: mysql-9.12.1
     app.kubernetes.io/component: primary
+  annotations:
+    metallb.universe.tf/allow-shared-ip: homelab-192.168.0.181
 spec:
-  type: NodePort
+  type: LoadBalancer
   sessionAffinity: None
   externalTrafficPolicy: "Cluster"
+  loadBalancerIP: 192.168.0.181
   ports:
     - name: mysql
       port: 3306
